# geoextent

./: .actrc  .buildinfo  .env.example  .gitignore  .pre-commit-config.yaml  .travis.yml  .zenodo.json  AUTHORS  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  changelog.html  codecov.yml  codemeta.json  core-features.html  development.html  examples.html  examples_journals.html  examples_senckenberg.html  external-metadata.html  features.html  genindex.html  index.html  install.html  objects.inv  profile_content_providers.py  providers.html  pyproject.toml  quickstart.html  requirements.txt  search.html  searchindex.js  setup.py  test_mendeley_demo.py  usage_cli.ipynb
.claude/: documentation-fixes-summary.md  readme-reduction-plan.md  settings.local.json  temp.md
.github/: RELEASE_NOTES_v0.13.0.md
.github/workflows/: appimage.yml  codeql-analysis.yml  comprehensive-tests.yml  documentation.yml  pythonpackage.yml
_sources/: changelog.rst.txt  core-features.rst.txt  development.rst.txt  examples.rst.txt  examples_journals.rst.txt  examples_senckenberg.rst.txt  features.rst.txt  index.rst.txt  install.rst.txt  providers.rst.txt  quickstart.rst.txt
_sources/howto/: api.rst.txt  cli.rst.txt  docker.rst.txt  index_howto.rst.txt
_sources/supportedformats/: index_supportedformats.rst.txt
_static/: documentation_options.js
appimage/: AppRun  geoextent.desktop
docs/: DEV-README.md  requirements-docs.txt
docs/source/: changelog.rst  conf.py  core-features.rst  development.rst  examples.rst  examples_senckenberg.rst  external-metadata.rst  features.rst  index.rst  install.rst  providers.rst  quickstart.rst
docs/source/_templates/: layout.html
docs/source/howto/: api.rst  appimage.rst  cli.rst  highlighting.rst  index_howto.rst  text-extraction.rst
docs/source/supportedformats/: index_supportedformats.rst
etc/: gdal-ubuntu-latest.sh
geoextent/: __init__.py  __main__.py  _version.py
geoextent/lib/: __init__.py  annotate.py  exceptions.py  export.py  extent.py  external_metadata.py  features.py  gazetteer.py  handleCSV.py  handleRaster.py  handleVector.py  handle_csv.py  handle_pointcloud.py  handle_raster.py  handle_text.py  handle_vector.py  helpfunctions.py  period_gazetteer.py  preview.py  progress.py
geoextent/lib/content_providers/: ArcticDataCenter.py  BAW.py  BGR.py  CKAN.py  CKANProvider.py  DEIMSSDR.py  DataOne.py  Dataverse.py  Dryad.py  Figshare.py  Forgejo.py  FourTU.py  GBIF.py  GDIDE.py  GFZ.py  GeoScienceWorld.py  GitHostProvider.py  GitHub.py  GitLab.py  HALODB.py  InvenioRDM.py  MDIDE.py  Mendeley.py  MendeleyData.py  NFDI4Earth.py  OSF.py  Opara.py  Pangaea.py  Pensoft.py  RADAR.py  RemoteRaster.py  SEANOE.py  STAC.py  Senckenberg.py  (+6 more)
howto/: api.html  appimage.html  cli.html  docker.html  highlighting.html  index_howto.html  text-extraction.html
profiling_results/: Dataverse_cumulative.txt  Dataverse_tottime.txt  Dryad_cumulative.txt  Dryad_tottime.txt  Figshare_cumulative.txt  Figshare_tottime.txt  GFZ_cumulative.txt  GFZ_tottime.txt  OSF_cumulative.txt  OSF_tottime.txt  PANGAEA_cumulative.txt  PANGAEA_tottime.txt  Pensoft_cumulative.txt  Pensoft_tottime.txt  Zenodo_cumulative.txt  Zenodo_tottime.txt  performance_analysis_report.md  summary_report.txt
scripts/: build-appimage.sh  check-appimage-deps.py  test-local-ci.sh
showcase/: nfdi4earth_geoextent_showcase.ipynb  requirements.txt
showcase/help_functions/: request_zenodo_api.py
supportedformats/: index_supportedformats.html
tests/: _text_ner_helpers.py  conftest.py  help_functions_test.py  test_api.py  test_api_arctic_data_center.py  test_api_b2share.py  test_api_baw.py  test_api_bgr.py  test_api_ckan.py  test_api_csv.py  test_api_custom_crs.py  test_api_dataone.py  test_api_dataverse.py  test_api_deimssdr.py  test_api_dryad.py  test_api_edmond.py  test_api_figshare.py  test_api_flatgeobuf.py  test_api_forgejo.py  test_api_fourtu.py  test_api_gbif.py  test_api_gdb.py  test_api_gdide.py  test_api_geojson.py  test_api_geoscienceworld.py  test_api_geotiff.py  test_api_gfz.py  test_api_github.py  test_api_gitlab.py  test_api_halodb.py  test_api_heidata.py  test_api_inveniordm.py  test_api_ioer_data.py  test_api_journals_janeway.py  test_api_journals_ojs.py  test_api_mdide.py  test_api_mendeley.py  test_api_mendeley_data.py  test_api_nfdi4earth.py  test_api_opara.py  (+57 more)
tests/scripts/: generate_raster_temporal_testdata.py
tests/testdata/: csv_coordinates_column.csv  csv_coords_column.csv  csv_geom_column.csv  csv_with_geometry_sample.csv  csv_wkb_column.csv  csv_wkt_geometry.csv  data-sources.md
tools/: build_periods_data.py
web/: IMPLEMENTATION.md  README.md  TESTING.md  build.py  deploy.sh  index.html  pyodide-config.json  serve.py  setup-dependencies.sh  test-basic.html
(+136 files in other folders)
