[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "geoextent"
dynamic = ["version"]
description = "A package to extract geospatial extent from files and directories"
keywords = ["spatial", "metadata", "geospatial", "location"]
readme = "README.md"
authors = [
    { name = "Daniel Nüst", email = "daniel.nuest@tu-dresden.de" },
    { name = "Sebastian Garzón" },
    { name = "Lars Drechsler" },
    { name = "Yousef Qamaz"}
]
maintainers = [
    { name = "Daniel Nüst", email = "daniel.nuest@tu-dresden.de" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = [
    "pyproj",
    "geojson>=2.4.1",
    "geojsonio",
    "pygeoj",
    "pyshp",
    "gdal",
    "patool",
    "python-dateutil",
    "pandas",
    "numpy<2",
    "requests",
    "traitlets",
    "wheel",
    "pangaeapy",
    "osfclient",
    "filesizelib",
    "setuptools-scm>=8",
    "tqdm",
    "bs4",
    "geopy",
    "python-dotenv",
    "humanfriendly"
]

[project.optional-dependencies]
dev = [
        "pytest",
        "pytest-cov",
        "twine",
        "setuptools>=64",
        "setuptools-scm>=8",
        "black",
        "pre-commit",
        #"flake8",
        # "mypy",
]
test = [
        "pytest",
        "pytest-cov",
        "geojson-validator"
]
docs = [
        "sphinx>=8.0.0",
        "jupyter_sphinx",
        "sphinxcontrib.autoprogram",
        "sphinx-issues"]

[project.scripts]
geoextent = "geoextent.__main__:main"

[project.urls]
Homepage = "https://github.com/nuest/geoextent"
#Documentation = "https://readthedocs.org"
Repository = "https://github.com/nuest/geoextent.git"
Issues = "https://github.com/nuest/geoextent/issues"
#Changelog = "https://github.com/nuest/geoextent/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["geoextent*"]
exclude = ["tests*"]
namespaces = false #  -> equals to find_packages

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
    #"integration",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "network: marks tests that require network access",
    "repository: marks tests that access remote repositories",
]

[tool.setuptools_scm]
version_file = "geoextent/_version.py"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
    # directories
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.claude
  | build
  | dist
)/
'''

[tool.coverage.run]
source = ["geoextent"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/_version.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]

[tool.coverage.html]
directory = "htmlcov"
